# color_coded

./: .color_coded  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  Makefile  Makefile.in  README.md  TODO  color_coded.cpp  color_coded.rb  color_coded.vim  configure  test.cpp
after/syntax/: color_coded.vim
autoload/: color_coded.vim
cmake/: FindLLVM.cmake  FindLibClang.cmake  FindLua.cmake  boost.cmake  check_luajit.cmake  cxx14.cmake  generate_sources.cmake  lua.cmake
cmake/clang/: download.cmake  link.cmake
colors/: twilighted.vim
include/: core.hpp  events.hpp
include/async/: queue.hpp  task.hpp  temp_file.hpp
include/clang/: compile.hpp  index.hpp  location.hpp  resource.hpp  source_range.hpp  string.hpp  token.hpp  token_pack.hpp  translation_unit.hpp
include/conf/: args_view.hpp  defaults.hpp  find.hpp  load.hpp
include/detail/: filesystem.hpp  resource.hpp  safe_func.hpp  util.hpp
include/env/: environment.hpp
include/lua/: eval.hpp
include/ruby/: eval.hpp  vim.hpp
include/vim/: buffer.hpp  commands.hpp  highlight.hpp  highlight_group.hpp
lib/: check_luajit  generate_sources  track_api
lib/boost/filesystem/: Makefile
lib/boost/filesystem/src/: operations.cpp
lib/boost/system/: Makefile
plugin/: color_coded.vim
rust/: Cargo.toml  rustfmt.toml  shell.nix
rust/autoload/: color_coded.vim
rust/dev/: shim.vim
rust/plugin/: color_coded.vim
rust/src/: clang.rs  highlight.rs  main.rs
rust/src/vim/: buffer.rs  handler.rs  mod.rs
src/: color_coded.cpp  main.cpp
test/: simple.cpp  stress.hpp
test/config/: .color_coded  compile_commands.json
test/include/: config.hpp
test/src/config/: main.cpp
tests/: params_test  simple.cpp
tests/include/: config.hpp
